<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/titleBar"
        android:layout_width="0dp"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titlebar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="51dp"
        android:background="#F1EFE7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="335dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/pic1"
                    app:srcCompat="@drawable/pic1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/title"
                    android:paddingLeft="50px"
                    android:text="@string/Title1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/text1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="   " />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20px"
                    android:text="Steps:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="335dp"
                    android:contentDescription="@string/pic2"
                    android:paddingLeft="20px"
                    android:paddingRight="20px"
                    app:srcCompat="@drawable/pic2" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/step1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/step1"
                    android:paddingLeft="50px"
                    android:text="@string/step2text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/_1_of_3" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="335dp"
                    android:contentDescription="@string/pic3"
                    android:paddingLeft="20px"
                    android:paddingRight="20px"
                    app:srcCompat="@drawable/pic3" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/text5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/text6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/_2_of_3" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="335dp"
                    android:contentDescription="@string/pic4"
                    android:paddingLeft="20px"
                    android:paddingRight="20px"
                    app:srcCompat="@drawable/pic4" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/text7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/text8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="#FFFFFF"
                    android:paddingLeft="50px"
                    android:text="@string/_3_of_3" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

